ajout du paragraphe lorem

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-bllbblblbllb
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quo recusandae obcaecati eos in corrupti quae. Dicta iusto adipisci, minima ratione odio, facere, quibusdam accusamus debitis unde aliquid dolores nihil.
+        Nihil nam officia nobis iste iusto id eveniet deserunt aliquid necessitatibus repellendus et repellat, earum totam enim repudiandae facere dolorum corporis, consequuntur cum sequi aut fugiat quae ad placeat. Iure.
+    </p>
+</body>
+</html>
