--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p>AALALAALLALLAAL</p>
+    <div class="blink">
+        <img src="images/raquettes.jpg" alt="image de raquettes">
+    </div>
+    
 </body>
 </html>
