--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="blink">
         <img src="images/raquettes.jpg" alt="image de raquettes">
     </div>
+    <p>ptite modif</p>
     
 </body>
 </html>
