--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ p>Ici killian au rapport</p>
     <div class="blink">
         <img src="images/raquettes.jpg" alt="image de raquettes">
     </div>
+    <p>ptite modif</p>
     
 </body>
 </html>
