--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+</head>
+<body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quo recusandae obcaecati eos in corrupti quae. Dicta iusto adipisci, minima ratione odio, facere, quibusdam accusamus debitis unde aliquid dolores nihil.
+        Nihil nam officia nobis iste iusto id eveniet deserunt aliquid necessitatibus repellendus et repellat, earum totam enim repudiandae facere dolorum corporis, consequuntur cum sequi aut fugiat quae ad placeat. Iure.
+    </p>
+</body>
+</html>
+
 p>Ici killian au rapport</p>
 
     <link rel="stylesheet" href="styles.css">
