--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 </body>
 </html>
 
-p>Ici killian au rapport</p>
+<p>Ici killian au rapport</p>
 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Purée de patatte purée de pomme de terre</h1>
     <p>AALALAALLALLAAL</p>
-    <div class="blink">
-        <img src="images/raquettes.jpg" alt="image de raquettes">
+    <div class="rebond">
+        <img src="images/logo_campus_num.jpg" alt="logo campus">
     </div>
-    <p>ptite modif</p>
     
 </body>
 </html>
