--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ p>Ici killian au rapport</p>
 
     <div>
         <p>je suis un paragraphe inutile</p>
+        <p>hohoho</p>
     </div>
 
     <div class="blink">
