--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@ p>Ici killian au rapport</p>
 <body>
     <h1>Purée de patatte purée de pomme de terre</h1>
     <p>AALALAALLALLAAL</p>
+
+    <div>
+        <p>je suis un paragraphe inutile</p>
+    </div>
+
     <div class="blink">
         <img src="images/raquettes.jpg" alt="image de raquettes">
     </div>
     <p>ptite modif</p>
     
+
 </body>
 </html>
