--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ p>Ici killian au rapport</p>
     <div>
         <p>je suis un paragraphe inutile</p>
     </div>
+    <div>
+        <p>Bravo le veau</p>
+    </div>
 
     <div class="blink">
         <img src="images/raquettes.jpg" alt="image de raquettes">
