--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quo recusandae obcaecati eos in corrupti quae. Dicta iusto adipisci, minima ratione odio, facere, quibusdam accusamus debitis unde aliquid dolores nihil.
+        Nihil nam officia nobis iste iusto id eveniet deserunt aliquid necessitatibus repellendus et repellat, earum totam enim repudiandae facere dolorum corporis, consequuntur cum sequi aut fugiat quae ad placeat. Iure.
+    </p>
+</body>
+</html>
+
+<p>Ici killian au rapport</p>
+
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Purée de patatte purée de pomme de terre</h1>
     <p>AALALAALLALLAAL</p>
+    <div class="rebond">
+        <img src="images/logo_campus_num.jpg" alt="logo campus">
+
+    <div>
+        <p>je suis un paragraphe inutile</p>
+        <p>hohoho</p>
+        <p>modifs nouvelle branche</p>
+    </div>   
+
 </body>
 </html>
