--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ p>Ici killian au rapport</p>
     </div>
     <div>
         <p>Bravo le veau</p>
+    <div>
+        <p>Bravo le veau</p>
     </div>
 
     <div class="blink">
