--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <p>je suis un paragraphe inutile</p>
         <p>hohoho</p>
     </div>
+    <div>
+        <p>Bravo le veau</p>
+    <div>
+        <p>Bravo le veau</p>
+    </div>
 
     <div class="blink">
         <img src="images/raquettes.jpg" alt="image de raquettes">
